--- a/src/App.config
+++ b/src/App.config
@@ -4,12 +4,13 @@
     <add key="JsonDirectory" value="json"/>
     <add key="JsonSetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
+    <add key="ImageCacheDirectory" value ="images\scryfall"/>
     <add key="ScriptDirectory" value="scripts"/>
     <add key="DraftDirectory" value="draft"/>
-    <add key="DefaultScriptName" value="booster2"/>
+    <add key="DefaultScriptName" value="booster.v3"/>
     <add key="DefaultImageType" value="png"/>
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckFullPath" value="c:\tools\nandeck\nandeck.exe"/>
-    <add key="SetsToLoad" value="LEA LEB 2ED AFR MID"/>
+    <add key="SetsToLoad" value="LEA LEB 2ED"/>
   </appSettings>
 </configuration>
