--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
 #    - name: Test code 
 #      run: dotnet test "./MagicTheGahteringProxyDrafter" --no-restore --verbosity normal
     - name: Publish application
-      run: dotnet publish "./src" -c Release -o MagicTheGatheringProxyDrafter -r win10-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true
+      #run: dotnet publish "./src" -c Release -o MagicTheGatheringProxyDrafter -r win10-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true
+      run: dotnet publish "./src" -c Release -o MagicTheGatheringProxyDrafter -r win10-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
