--- a/src/ProxyDraftor.csproj
+++ b/src/ProxyDraftor.csproj
@@ -26,6 +26,12 @@
     <None Update="ext\nanDeck\nandeck.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="scripts\booster.v1.nde">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="scripts\booster.v2.nde">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
