last generated set is saved and default value for set selection

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/src/images/scryfall
+/src/booster
+/src/draft
