--- a/src/App.config
+++ b/src/App.config
@@ -11,8 +11,9 @@
     <add key="DefaultScriptName" value="booster.v2"/>
     <add key="DefaultImageType" value="png"/>
     <add key="DefaultCardLanguage" value="en"/>
-    <add key="NanDeckFullPath" value="ext\nandeck\nandeck.exe"/>
+    <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
     <add key="SetsToLoad" value="LEA LEB 2ED"/>
     <add key="LastGeneratedSet" value="VMA"/>
+    <add key="AutomaticPrinting" value="false"/>
   </appSettings>
 </configuration>
