--- a/src/App.config
+++ b/src/App.config
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
   <appSettings>
     <add key="JsonDirectory" value="json"/>
     <add key="JsonSetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
-    <add key="ImageCacheDirectory" value ="images"/>
-    <add key="ScryfallCacheDirectory" value ="scryfall"/>
+    <add key="ImageCacheDirectory" value="images" />
+    <add key="ScryfallCacheDirectory" value="scryfall" />
     <add key="ScriptDirectory" value="scripts"/>
     <add key="DraftDirectory" value="draft"/>
     <add key="DefaultScriptName" value="booster.v2"/>
     <add key="DefaultImageType" value="png"/>
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
-    <add key="SetsToLoad" value="LEA LEB 2ED"/>
+    <add key="SetsToLoad" value="LEA LEB 2ED 3ED VMA VOW"/>
     <add key="LastGeneratedSet" value="VMA"/>
     <add key="AutomaticPrinting" value="false"/>
   </appSettings>
