--- a/.gitignore
+++ b/.gitignore
@@ -232,7 +232,7 @@ orleans.codegen.cs
 
 # Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
-#*.snk
+*.snk
 
 # Since there are multiple workflows, uncomment next line to ignore bower_components
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
@@ -351,4 +351,8 @@ MigrationBackup/
 /src/images/scryfall
 /src/booster
 /src/draft
-/src/json/
+/src/json
+/src/json/sets
+/src/json/decks
+/src/bin
+/src/obj
