--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -14,7 +14,7 @@
     <add key="DefaultImageType" value="png"/>
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
-    <add key="SetsToLoad" value="LEA LEB 2ED 3ED FBB VMA VOW"/>
+    <add key="SetsToLoad" value="LEA LEB 2ED 3ED 4ED AFR FBB VMA MID VOW CHK ARN"/>
     <add key="LastGeneratedSet" value="VMA"/>
     <add key="AutomaticPrinting" value="false"/>
   </appSettings>
