configurable if use list or all files in folder

--- a/src/App.Release.config
+++ b/src/App.Release.config
@@ -17,5 +17,6 @@
     <add key="SetsToLoad" value="LEA LEB 2ED 3ED"/>
     <add key="LastGeneratedSet" value="LEB"/>
     <add key="AutomaticPrinting" value="false"/>
+    <add key="UseSetList" value="true"/>
   </appSettings>
 </configuration>
