--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -9,17 +9,18 @@ jobs:
     name: Release
     strategy:
       matrix:
-        kind: ['linux', 'windows', 'macOS']
+        #kind: ['linux', 'windows', 'macOS']
+        kind: ['windows']
         include:
-          - kind: linux
-            os: ubuntu-latest
-            target: linux-x64
+          #- kind: linux
+          #  os: ubuntu-latest
+          #  target: linux-x64
           - kind: windows
             os: windows-latest
             target: win-x64
-          - kind: macOS
-            os: macos-latest
-            target: osx-x64
+          #- kind: macOS
+          #  os: macos-latest
+          #  target: osx-x64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -28,7 +29,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.101
+          dotnet-version: 5.0.14
 
       - name: Build
         shell: bash
