--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -28,7 +28,7 @@ jobs:
         shell: bash
         run: |
           tag=$(git describe --tags --abbrev=0)
-          release_name="App-$tag-${{ matrix.target }}"
+          release_name="MgcPrxyDrftr-$tag-${{ matrix.target }}"
           # Build everything
           dotnet publish src/ProxyDraftor.csproj --framework net5.0 --runtime "${{ matrix.target }}" -c Release -o "$release_name"
           # Pack files
