--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -9,11 +9,17 @@ jobs:
     name: Release
     strategy:
       matrix:
-        kind: ['windows']
+        kind: ['linux', 'windows', 'macOS']
         include:
+          - kind: linux
+            os: ubuntu-latest
+            target: linux-x64
           - kind: windows
             os: windows-latest
             target: win-x64
+          - kind: macOS
+            os: macos-latest
+            target: osx-x64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -43,6 +49,6 @@ jobs:
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
-          files: "App*"
+          files: "MgcPrxyDrftr*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
