--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -3,7 +3,7 @@
   <configSections>
   </configSections>
   <appSettings>
-    <add key="BaseDirectory" value="C:\Users\Affenbande\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>
+    <add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>
     <add key="JsonDirectory" value="json"/>
     <add key="JsonSetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
@@ -16,7 +16,7 @@
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
     <!--add key="SetsToLoad" value="LEA LEB 2ED 3ED 4ED AFR FBB VMA MID VOW CHK ARN"/-->
-    <add key="SetsToLoad" value="LEA LEB 2ED ARN ATQ LEG DRK 3ED CHR 4ED FBB"/>
+    <add key="SetsToLoad" value="LEA LEB 2ED ARN ATQ LEG DRK 3ED CHR 4ED VOW NEO"/>
     <add key="LastGeneratedSet" value="VMA"/>
     <add key="AutomaticPrinting" value="false"/>
     <add key="UseSetList" value="true"/>
