--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -15,9 +15,7 @@
     <add key="DefaultImageType" value="png"/>
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
-    <!--add key="SetsToLoad" value="LEA LEB 2ED 3ED 4ED AFR FBB VMA MID VOW CHK ARN"/-->
-    <add key="SetsToLoad" value="LEA LEB 2ED ARN ATQ LEG DRK 3ED CHR 4ED VOW NEO"/>
-    <add key="AutomaticPrinting" value="false"/>
+    <add key="SetsToLoad" value="LEA LEB 2ED ARN ATQ LEG DRK 3ED CHR 4ED VOW NEO VMA NPH M10"/>
     <add key="UseSetList" value="true"/>
   </appSettings>
 </configuration>
