--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -3,7 +3,8 @@
   <configSections>
   </configSections>
   <appSettings>
-    <add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>
+    <!--add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/-->
+    <add key="BaseDirectory" value="C:\Users\Affenbande\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>
     <add key="JsonDirectory" value="json"/>
     <add key="JsonSetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
