--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -6,7 +6,7 @@
     <!--add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/-->
     <add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MgcPrxyDrftr\src"/>
     <add key="JsonDirectory" value="json"/>
-    <add key="JsonSetDirectory" value="sets"/>
+    <add key="SetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
     <add key="ImageCacheDirectory" value="images" />
     <add key="ScryfallCacheDirectory" value="scryfall" />
