--- a/src/App.Release.config
+++ b/src/App.Release.config
@@ -4,7 +4,7 @@
   </configSections>
   <appSettings>
     <add key="JsonDirectory" value="json"/>
-    <add key="JsonSetDirectory" value="sets"/>
+    <add key="SetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
     <add key="ImageCacheDirectory" value="images" />
     <add key="ScryfallCacheDirectory" value="scryfall" />
