--- a/src/App.Release.config
+++ b/src/App.Release.config
@@ -6,7 +6,7 @@
     <add key="JsonDirectory" value="json"/>
     <add key="SetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
-    <add key="ImageCacheDirectory" value="images" />
+    <add key="CacheDirectory" value="cache" />
     <add key="ScryfallCacheDirectory" value="scryfall" />
     <add key="ScriptDirectory" value="scripts"/>
     <add key="DraftDirectory" value="draft"/>
