--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -4,7 +4,8 @@
   </configSections>
   <appSettings>
     <!--add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/-->
-    <add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MgcPrxyDrftr\src"/>
+    <!--add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MgcPrxyDrftr\src"/-->
+    <add key="BaseDirectory" value="C:\Users\Affenbande\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>
     <add key="JsonDirectory" value="json"/>
     <add key="SetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
