--- a/src/App.Release.config
+++ b/src/App.Release.config
@@ -10,11 +10,11 @@
     <add key="ScryfallCacheDirectory" value="scryfall" />
     <add key="ScriptDirectory" value="scripts"/>
     <add key="DraftDirectory" value="draft"/>
-    <add key="DefaultScriptName" value="booster.v2"/>
+    <add key="DefaultScriptName" value="booster.noguid.v3"/>
     <add key="DefaultImageType" value="png"/>
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
-    <add key="SetsToLoad" value="LEA LEB 2ED 3ED"/>
     <add key="UseSetList" value="true"/>
+    <add key="SettingsPath" value="json\settings.json"/>
   </appSettings>
 </configuration>
