--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -47,7 +47,9 @@
 
   <ItemGroup>
     <Folder Include="json\sets\" />
+    <Folder Include="output\decks\" />
     <Folder Include="output\draft\" />
+    <Folder Include="output\lists\" />
     <Folder Include="temporary\booster\" />
     <Folder Include="temporary\decks\" />
     <Folder Include="temporary\draft\" />
