folder download is working again

--- a/src/App.Release.config
+++ b/src/App.Release.config
@@ -15,6 +15,6 @@
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
     <add key="UseSetList" value="true"/>
-    <add key="SettingsPath" value="json\settings.json"/>
+    <!--<add key="SettingsPath" value="json\settings.json"/>-->
   </appSettings>
 </configuration>
