--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -3,8 +3,8 @@
   <configSections>
   </configSections>
   <appSettings>
-    <add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MgcPrxyDrftr\src"/>
-    <!--<add key="BaseDirectory" value="C:\Users\Affenbande\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>-->
+    <!--<add key="BaseDirectory" value="C:\Users\clotterstedt\source\repos\RetroLotti\MgcPrxyDrftr\src"/>-->
+    <add key="BaseDirectory" value="C:\Users\Affenbande\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>
     <add key="JsonDirectory" value="json"/>
     <add key="SetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
@@ -12,11 +12,11 @@
     <add key="ScryfallCacheDirectory" value="scryfall" />
     <add key="ScriptDirectory" value="scripts"/>
     <add key="DraftDirectory" value="draft"/>
-    <add key="DefaultScriptName" value="booster.noguid.v3"/>
+    <add key="DefaultScriptName" value="booster.v3"/>
+    <add key="DefaultScriptNameNoGuid" value="booster.noguid.v3"/>
     <add key="DefaultImageType" value="png"/>
     <add key="DefaultCardLanguage" value="en"/>
     <add key="NanDeckPath" value="ext\nandeck\nandeck.exe"/>
     <add key="UseSetList" value="true"/>
-    <add key="SettingsPath" value="json\settings.json"/>
   </appSettings>
 </configuration>
