some changes and a fix for problem that occurs when validating sha256 hashes

--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -66,6 +66,7 @@
 
   <ItemGroup>
     <Folder Include="cache\scryfall\" />
+    <Folder Include="json\" />
     <Folder Include="output\decks\" />
     <Folder Include="output\draft\" />
     <Folder Include="output\draft\2022-03-11T08-07-46\" />
