--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -34,8 +34,9 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="FreeSpire.PDF" Version="8.6.0" />
     <PackageReference Include="MtgApiManager.Lib" Version="2.3.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="ScryfallAPI.Client" Version="3.1.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
