added mechanic to create contents and sheet classes

--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Folder Include="cache\scryfall\" />
     <Folder Include="json\decks\" />
+    <Folder Include="models\upgrades\" />
     <Folder Include="output\decks\" />
     <Folder Include="output\draft\" />
     <Folder Include="output\lists\" />
