refactored sheet upgrade added set dependencies so that it can be ensured that all sets are added

--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -75,6 +75,7 @@
     <Folder Include="cache\scryfall\" />
     <Folder Include="json\decks\" />
     <Folder Include="json\sets\" />
+    <Folder Include="models\upgrades\" />
     <Folder Include="output\decks\" />
     <Folder Include="output\draft\" />
     <Folder Include="output\lists\" />
