--- a/src/App.Debug.config
+++ b/src/App.Debug.config
@@ -3,8 +3,8 @@
   <configSections>
   </configSections>
   <appSettings>
-    <add key="BaseDirectory" value="C:\Users\Affenbande\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>
-    <!--<add key="BaseDirectory" value="C:\Users\19137590\Source\Repos\MgcPrxyDrftr\src"/>-->
+    <!--<add key="BaseDirectory" value="C:\Users\Affenbande\source\repos\RetroLotti\MagicTheGatheringProxyDrafter\src"/>-->
+    <add key="BaseDirectory" value="C:\Users\19137590\Source\Repos\MgcPrxyDrftr\src"/>
     <add key="JsonDirectory" value="json"/>
     <add key="SetDirectory" value="sets"/>
     <add key="BoosterDirectory" value="booster"/>
