--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -72,7 +72,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="cache\scryfall\" />
+    <Folder Include="cache\scryfall\back\" />
     <Folder Include="json\decks\" />
     <Folder Include="models\upgrades\" />
     <Folder Include="output\decks\" />
