--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -52,12 +52,12 @@ jobs:
           files: "MgcPrxyDrftr*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #- name: Publish PHP Api
-      #  uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      #  with:
-      #    server: ${{ secrets.FTP_HOST }}
-      #    username: ${{ secrets.FTP_USERNAME }}
-      #    password: ${{ secrets.FTP_PASSWORD }}
-      #    local-dir: ./api/
-      #    server-dir: /var/www/html/
-      #    dry-run: false
+      - name: Publish PHP Api
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./api/
+          server-dir: /var/www/html/
+          dry-run: false
