--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <AppConfig>App.$(Configuration).config</AppConfig>
@@ -6,7 +6,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ApplicationIcon>icon.ico</ApplicationIcon>
     <Authors>RetroLotti</Authors>
     <Product>Magic the Gathering Proxy Drafter</Product>
@@ -37,11 +37,10 @@
     <PackageReference Include="FreeSpire.PDF" Version="10.2.0" />
     <PackageReference Include="MtgApiManager.Lib" Version="2.3.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="QuestPDF" Version="2024.10.2" />
+    <PackageReference Include="QuestPDF" Version="2024.10.3" />
     <PackageReference Include="ScryfallAPI.Client" Version="3.1.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
-    <PackageReference Include="WolfCurses" Version="2018.9.12.1" />
   </ItemGroup>
 
   <ItemGroup>
