--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MgcPrxyDrftr": {
       "commandName": "Project",
-      "commandLineArgs": "mom 1 c"
+      "commandLineArgs": "fdn 1 p"
     }
   }
 }
