--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 #    - name: Test code 
 #      run: dotnet test "./MgcPrxyDrftr" --no-restore --verbosity normal
     - name: Publish application
-      run: dotnet publish "./src" -c Release -o MgcPrxyDrftr --runtime win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained
+      run: dotnet publish "./src" -c Release --runtime win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
