--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -31,11 +31,13 @@
   
   <ItemGroup>
     <PackageReference Include="FreeSpire.PDF" Version="10.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
     <PackageReference Include="MtgApiManager.Lib" Version="2.3.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="QuestPDF" Version="2024.10.3" />
+    <PackageReference Include="QuestPDF" Version="2024.10.4" />
     <PackageReference Include="ScryfallAPI.Client" Version="3.1.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
   </ItemGroup>
 
