implemented command line mode also this mode can go absolutely silent

--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MgcPrxyDrftr": {
       "commandName": "Project",
-      "commandLineArgs": "fdn 1 p"
+      "commandLineArgs": "--silent --booster fdn|1|p,dsk|1|p"
     }
   }
 }
