--- a/.github/workflows/manual_publish_api_release.yml
+++ b/.github/workflows/manual_publish_api_release.yml
@@ -21,5 +21,5 @@ jobs:
             **/.git*
             **/.git*/**
             **/node_modules/**
-            **/api/fool/**
+            **/fool/**
   
