--- a/.github/workflows/push_develop.yaml
+++ b/.github/workflows/push_develop.yaml
@@ -37,3 +37,5 @@ jobs:
           **/.git*/**
           **/node_modules/**
           **/fool/**
+          **/config.php
+          **/tokens*.php
