--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,3 +1,10 @@
+# enable the rewrite engine
 RewriteEngine On
+
+# check if the requested file exists at all
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ api.php [QSA,L]
+
+# Match the desired URL structure
+RewriteRule ^([^/]+)/([^/]+)/([^/]+)/?$ boosters.php?s=$1&b=$2&a=$3 [QSA]
+RewriteRule ^([^/]+)/([^/]+)/([^/]+)/?$ boosters.dev.php?s=$1&b=$2&a=$3 [QSA,L]
+#RewriteRule ^(.*)$ api.php [QSA,L]
