--- a/.github/workflows/develop_openboosters.yml
+++ b/.github/workflows/develop_openboosters.yml
@@ -32,7 +32,7 @@ jobs:
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./api/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
