added command to create a single pdf document for a4 printing

--- a/src/MgcPrxyDrftr.csproj
+++ b/src/MgcPrxyDrftr.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Folder Include="cache\" />
     <Folder Include="models\upgrades\" />
+    <Folder Include="temporary\" />
   </ItemGroup>
 
   <ItemGroup>
